--- a/app/steps/ui/details/grandchildadoptedout/template.html
+++ b/app/steps/ui/details/grandchildadoptedout/template.html
@@ -7,8 +7,8 @@
   {% set relationship = fields.relationshipToDeceased.value %}
     {{ govukRadios({
         classes: "govuk-radios--inline",
-        idPrefix: "childAdoptedOut",
-        name: "childAdoptedOut",
+        idPrefix: "grandchildAdoptedOut",
+        name: "grandchildAdoptedOut",
         fieldset: {
             legend: {
                 {% if relationship == "child" %}
@@ -21,19 +21,18 @@
                 classes: "govuk-fieldset__legend--l"
             }
         },
-        #########
-        errorMessage: { text: fields.childAdoptedOut.errorMessage
-            | replace("{deceasedName}", fields.deceasedName.value) | safe } if fields.childAdoptedOut.errorMessage,
+        errorMessage: { text: fields.grandchildAdoptedOut.errorMessage
+            | replace("{deceasedName}", fields.deceasedName.value) | safe } if fields.grandchildAdoptedOut.errorMessage,
         items: [
             {
                 value: "optionYes",
                 text: content["optionYes"] | safe,
-                checked: true if fields.childAdoptedOut.value == "optionYes"
+                checked: true if fields.grandchildAdoptedOut.value == "optionYes"
             },
             {
                 value: "optionNo",
                 text: content["optionNo"] | safe,
-                checked: true if fields.childAdoptedOut.value == "optionNo"
+                checked: true if fields.grandchildAdoptedOut.value == "optionNo"
             }
         ]
     }) }}
