--- a/app/steps/ui/details/childadoptedout/template.html
+++ b/app/steps/ui/details/childadoptedout/template.html
@@ -4,17 +4,24 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block form_content %}
+  {% set relationship = fields.relationshipToDeceased.value %}
     {{ govukRadios({
         classes: "govuk-radios--inline",
         idPrefix: "childAdoptedOut",
         name: "childAdoptedOut",
         fieldset: {
             legend: {
-                text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
+                {% if relationship == "child" %}
+                    text: content.childQuestion | replace("{deceasedName}", fields.deceasedName.value) | safe,
+                {% else %}
+                    text: content.grandchildQuestion | replace("{deceasedName}", fields.deceasedName.value) | safe,
+                {% endif %}
+                #text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
             }
         },
+        #########
         errorMessage: { text: fields.childAdoptedOut.errorMessage
             | replace("{deceasedName}", fields.deceasedName.value) | safe } if fields.childAdoptedOut.errorMessage,
         items: [
