--- a/app/steps/ui/executors/coapplicantname/template.html
+++ b/app/steps/ui/executors/coapplicantname/template.html
@@ -22,10 +22,10 @@
         label: {
             text: content.fullName | safe
         },
-        id: "coApplicantName",
-        name: "coApplicantName",
-        value: fields.coApplicantName.value | safe,
-        errorMessage: { text: fields.coApplicantName.errorMessage | safe } if fields.coApplicantName.errorMessage,
+        id: "fullName",
+        name: "fullName",
+        value: fields.fullName.value | safe,
+        errorMessage: { text: fields.fullName.errorMessage | safe } if fields.fullName.errorMessage,
         attributes: {
             maxlength: 100
         },
