--- a/app/steps/ui/executors/parentdiebefore/template.html
+++ b/app/steps/ui/executors/parentdiebefore/template.html
@@ -6,18 +6,18 @@
 {% block form_content %}
     {% call govukFieldset({
     legend: {
-    text: content.question | safe,
+    text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
     classes: "govuk-fieldset__legend--l",
     isPageHeading: true
     }
     }) %}
     {% endcall %}
-    <p class="govuk-body">{{ content.hintText | safe }}</p>
+    <p class="govuk-body">{{ content.hintText | replace("{deceasedName}", fields.deceasedName.value) | safe }}</p>
     {{ govukRadios({
         classes: "govuk-radios--inline",
         idPrefix: "applicantParentDieBeforeDeceased",
         name: "applicantParentDieBeforeDeceased",
-        errorMessage: { text: fields.applicantParentDieBeforeDeceased.errorMessage | safe } if fields.applicantParentDieBeforeDeceased.errorMessage,
+        errorMessage: { text: fields.applicantParentDieBeforeDeceased.errorMessage | replace("{deceasedName}", fields.deceasedName.value) | safe } if fields.applicantParentDieBeforeDeceased.errorMessage,
         items: [
             {
                 value: "optionYes",
