--- a/app/steps/ui/details/adoptedout/template.html
+++ b/app/steps/ui/details/adoptedout/template.html
@@ -4,28 +4,29 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block form_content %}
+    {% set relationship = fields.relationshipToDeceased.value %}
     {{ govukRadios({
         classes: "govuk-radios--inline",
-        idPrefix: "childAdoptionPlace",
-        name: "childAdoptionPlace",
+        idPrefix: "adoptedOut",
+        name: "adoptedOut",
         fieldset: {
             legend: {
-                text: content.question | safe,
+                text: (content.childQuestion if relationship == "optionChild" else content.grandchildQuestion)
+                  | replace("{deceasedName}", fields.deceasedName.value) | safe,
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
             }
         },
-        errorMessage: { text: fields.childAdoptionPlace.errorMessage | safe } if fields.childAdoptionPlace.errorMessage,
         items: [
             {
                 value: "optionYes",
                 text: content["optionYes"] | safe,
-                checked: true if fields.childAdoptionPlace.value == "optionYes"
+                checked: true if fields.adoptedOut.value == "optionYes"
             },
             {
                 value: "optionNo",
                 text: content["optionNo"] | safe,
-                checked: true if fields.childAdoptionPlace.value == "optionNo"
+                checked: true if fields.adoptedOut.value == "optionNo"
             }
         ]
     }) }}
