DTSPB-4720 Intestacy Journey Parent Application

--- a/app/steps/ui/applicant/relationshiptodeceased/template.html
+++ b/app/steps/ui/applicant/relationshiptodeceased/template.html
@@ -24,7 +24,7 @@
     hint: { text: content["hintGrandchild"] | safe },
     checked: true if fields.relationshipToDeceased.value == "optionGrandchild"
 }), answers) %}
-{% if fields.deceasedMaritalStatus.value != "optionMarried" %}
+{% if fields.deceasedMaritalStatus.value == "optionNotMarried" %}
   {% set answers = (answers.push({
       value: "optionParent",
       text: content["optionParent"] | safe,
