DTSPB-4734 Added changes to grandchild adoption questions

--- a/app/steps/ui/details/grandchildadoptedin/template.html
+++ b/app/steps/ui/details/grandchildadoptedin/template.html
@@ -4,39 +4,29 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block form_content %}
-  {% set relationship = fields.relationshipToDeceased.value %}
     {{ govukRadios({
         classes: "govuk-radios--inline",
-        idPrefix: "childAdoptedIn",
-        name: "childAdoptedIn",
+        idPrefix: "grandchildAdoptedIn",
+        name: "grandchildAdoptedIn",
         fieldset: {
             legend: {
-                {% if relationship == "child" %}
-                text: content.childQuestion | replace("{deceasedName}", fields.deceasedName.value) | safe,
-                {% else %}
-                text: content.grandchildQuestion | replace("{deceasedName}", fields.deceasedName.value) | safe,
-                {% endif %}
+                text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
             }
         },
-        {% if relationship == "child" %}
-            errorMessage: { text: fields.childAdoptedIn.errorMessage
-            | replace("{deceasedName}", fields.deceasedName.value) | safe } if fields.childAdoptedIn.errorMessage,
-            {% else %}
-            errorMessage: { text: fields.grandchildAdoptedIn.errorMessage
+        errorMessage: { text: fields.grandchildAdoptedIn.errorMessage
             | replace("{deceasedName}", fields.deceasedName.value) | safe } if fields.grandchildAdoptedIn.errorMessage,
-        {% endif %}
         items: [
           {
               value: "optionYes",
               text: content["optionYes"] | safe,
-              checked: true if fields.childAdoptedIn.value == "optionYes"
+              checked: true if fields.grandchildAdoptedIn.value == "optionYes"
           },
           {
               value: "optionNo",
               text: content["optionNo"] | safe,
-              checked: true if fields.childAdoptedIn.value == "optionNo"
+              checked: true if fields.grandchildAdoptedIn.value == "optionNo"
           }
         ]
 }) }}
